data/all_generated_tests/raw_wast_tests/br_if_TypeMismatchinControlFlowInstructions_1878.wast
;; 9. **Test 9**:    - **Description**: A `loop` expecting an `i32` type input for each iteration, with `br_if` attempting to branch using an `f32` value.    - **Constraint**: Tests type constraint consistency for loop iterations and backward branching.    - **Relation to Type Mismatch**: Validates backward branching types required for loop continuations.

(assert_invalid
  (module (func $type-loop-f32 (loop (br_if 0 (f32.const 1.0)))))
  "type mismatch"
)